syntax = "proto3";

option csharp_namespace = "GrpcTestingLimitationsClient.proto";


service Unary { 

	rpc UnaryResponse (DataRequest) returns (DataResponse);

	rpc BatchUnaryResponse(BatchDataRequest) returns (BatchDataResponse);

}

message DataRequest
{ 
	string RequestId = 1;
	string RequestType = 2; 
	string RequestTimestamp = 3; 
	string DataContent = 4;
	string DataSize = 5;
	bool ConnectionAlive = 6;
}

message DataResponse
{ 
	string RequestId = 1; 
	string RequestType = 2;
    bool ConnectionAlive = 3;
	string ResponseTimestamp = 4;
}

message BatchDataRequest
{ 

	repeated BatchDataRequestDetails BatchDataRequest = 1;
}

message BatchDataRequestDetails
{ 
	string OverarchingRequestId = 1;
	string RequestId = 2;
	string RequestType = 3; 
	string RequestTimestamp = 4; 
	string DataSize = 5;
	string DataContent = 6;
	bool ConnectionAlive = 7;
}

message BatchDataResponse
{ 
	string batchResponseId = 1; 
	int32 numberOfRequestsInBatch = 2; 
	string ResponseTimestamp = 3; 
	string RequestType = 4;
}